==> Infineon/XMC-for-Arduino/libraries/Wire/src/Wire.cpp <==
#include <stdlib.h>
#include <string.h>
#include <inttypes.h>
#include "xmc_gpio.h"
#include "Wire.h"
#include "SPI.h"

void TwoWire::begin(void)
{
    // Check if desire USIC channel is already in use
	if((XMC_I2C_config->channel->CCR & USIC_CH_CCR_MODE_Msk) == XMC_USIC_CH_OPERATING_MODE_SPI)
	{
		SPI.end();
	}

	hasError = false;
    isMaster = true;

    XMC_I2C_CH_Init(XMC_I2C_config->channel, &(XMC_I2C_config->channel_config));

    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX0, XMC_I2C_config->input_source_dx0);
    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX1, XMC_I2C_config->input_source_dx1);

    /* configure i2c tx fifo */
    XMC_USIC_CH_TXFIFO_Configure(XMC_I2C_config->channel,
  							   16,
  							   XMC_USIC_CH_FIFO_SIZE_16WORDS,
  							   (uint32_t)15);

    /* configure i2c rx fifo */
    XMC_USIC_CH_RXFIFO_Configure(XMC_I2C_config->channel,
  							   0,
  							   XMC_USIC_CH_FIFO_SIZE_16WORDS,
  								(uint32_t)(15));

    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->sda.port, (uint8_t)XMC_I2C_config->sda.pin, &(XMC_I2C_config->sda_config));
    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->scl.port, (uint8_t)XMC_I2C_config->scl.pin, &(XMC_I2C_config->scl_config));
	
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_PROTOCOL,
                                        XMC_I2C_config->protocol_irq_service_request);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->protocol_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->protocol_irq_num);

    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)(XMC_I2C_CH_EVENT_NACK | XMC_I2C_CH_EVENT_DATA_LOST | XMC_I2C_CH_EVENT_ARBITRATION_LOST | XMC_I2C_CH_EVENT_ERROR));

    XMC_I2C_CH_Start(XMC_I2C_config->channel);
}

void TwoWire::begin(uint8_t address)
{
    // Check if desire USIC channel is already in use
	if((XMC_I2C_config->channel->CCR & USIC_CH_CCR_MODE_Msk) == XMC_USIC_CH_OPERATING_MODE_SPI)
	{
		SPI.end();
	}
    isMaster = false;
    slaveAddress = address;

    XMC_I2C_CH_Init(XMC_I2C_config->channel, &(XMC_I2C_config->channel_config));

    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX0, XMC_I2C_config->input_source_dx0);
    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX1, XMC_I2C_config->input_source_dx1);

    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->sda.port, (uint8_t)XMC_I2C_config->sda.pin, &(XMC_I2C_config->sda_config));
    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->scl.port, (uint8_t)XMC_I2C_config->scl.pin, &(XMC_I2C_config->scl_config));

    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_RECEIVE,
                                        XMC_I2C_config->slave_receive_irq_service_request);
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_ALTERNATE_RECEIVE,
                                        XMC_I2C_config->slave_receive_irq_service_request);
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_PROTOCOL,
                                        XMC_I2C_config->protocol_irq_service_request);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->slave_receive_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->slave_receive_irq_num);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->protocol_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->protocol_irq_num);

    XMC_I2C_CH_SetSlaveAddress(XMC_I2C_config->channel, (address << 1));

    /*Flush receive buffer*/
    (void)XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);
    (void)XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);

    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)(XMC_I2C_CH_EVENT_DATA_LOST | XMC_I2C_CH_EVENT_ARBITRATION_LOST | XMC_I2C_CH_EVENT_ERROR));
    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_STANDARD_RECEIVE | (uint32_t)XMC_I2C_CH_EVENT_ALTERNATIVE_RECEIVE));
    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_SLAVE_READ_REQUEST | (uint32_t)XMC_I2C_CH_EVENT_STOP_CONDITION_RECEIVED));

    XMC_I2C_CH_Start(XMC_I2C_config->channel);
}

void TwoWire::begin(int address)
{
    begin((uint8_t)address);
}

void TwoWire::setClock(uint32_t clock)
{
    XMC_I2C_CH_SetBaudrate(XMC_I2C_config->channel, clock);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity, uint32_t iaddress, uint8_t isize, uint8_t sendStop)
{
	uint32_t StatusFlag;
    beginTransmission(address);
	
    // clamp to buffer length
    if (quantity > BUFFER_LENGTH)
    {
        quantity = BUFFER_LENGTH;
    }

    // send internal address; this mode allows sending a repeated start to access
    // some devices' internal registers. This function is executed by the hardware
    // TWI module on other processors (for example Due's TWI_IADR and TWI_MMR registers)
    if (isize > 0)
    {

        // the maximum size of internal address is 3 bytes
        if (isize > 3)
        {
            isize = 3;
        }

        // write internal register address - most significant byte first
        while (isize-- > 0)
        {
            write((uint8_t)(iaddress >> (isize * 8)));
        }
        endTransmission(false);

        XMC_I2C_CH_MasterRepeatedStart(XMC_I2C_config->channel, (txAddress << 1), XMC_I2C_CH_CMD_READ);
    }
    else if (inRepStart)
	{
        XMC_I2C_CH_MasterRepeatedStart(XMC_I2C_config->channel, (txAddress << 1), XMC_I2C_CH_CMD_READ);
    	inRepStart = false;
	}
	else
    {
        XMC_I2C_CH_MasterStart(XMC_I2C_config->channel, (txAddress << 1), XMC_I2C_CH_CMD_READ);
    }

    for (uint8_t count = 0; count < (quantity - 1); count ++)
    {
        XMC_I2C_CH_MasterReceiveAck(XMC_I2C_config->channel);

		timeout = WIRE_COMMUNICATION_TIMEOUT;
		// Wait for Receive, leave when NACK is detected
		do
		{
			StatusFlag = XMC_I2C_CH_GetStatusFlag(XMC_I2C_config->channel);
	
			// Check for NACK, indicates that no slave with desired address is on the bus
			if(this->hasError == true || timeout == 0)
			{
				this->hasError = false;
				flush();
				return 0;
			}
			timeout--;
		}while ( (StatusFlag & (XMC_I2C_CH_STATUS_FLAG_RECEIVE_INDICATION | XMC_I2C_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION)) == 0U );
		XMC_I2C_CH_ClearStatusFlag(XMC_I2C_config->channel, XMC_I2C_CH_STATUS_FLAG_RECEIVE_INDICATION | XMC_I2C_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION);

        rxBuffer[count] = XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);
    }

    XMC_I2C_CH_MasterReceiveNack(XMC_I2C_config->channel);
		
	timeout = WIRE_COMMUNICATION_TIMEOUT;
	// Wait for Receive, leave when NACK is detected
    do
	{
		StatusFlag = XMC_I2C_CH_GetStatusFlag(XMC_I2C_config->channel);

		// Check for NACK, indicates that no slave with desired address is on the bus
		if(this->hasError == true || timeout == 0)
		{
			this->hasError = false;
			flush();
			return 0;
		}
		timeout--;
	}while ( (StatusFlag & (XMC_I2C_CH_STATUS_FLAG_RECEIVE_INDICATION | XMC_I2C_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION)) == 0U );
    XMC_I2C_CH_ClearStatusFlag(XMC_I2C_config->channel, XMC_I2C_CH_STATUS_FLAG_RECEIVE_INDICATION | XMC_I2C_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION);

    rxBuffer[quantity - 1] = XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);

    if(sendStop)
    {
        XMC_I2C_CH_MasterStop(XMC_I2C_config->channel);
		
		timeout = WIRE_COMMUNICATION_TIMEOUT;
        while ( XMC_USIC_CH_GetTransmitBufferStatus(XMC_I2C_config->channel) == XMC_USIC_CH_TBUF_STATUS_BUSY )
		{
			if(this->hasError == true || timeout == 0)
			{
				this->hasError = false;
				inRepStart = false;
				flush();
				return 1;
			}
			timeout--;
		}
    }

    // set rx buffer iterator vars
    rxBufferIndex = 0;
    rxBufferLength = quantity;
    // indicate that we are done transmitting
    transmitting = 0;

    return quantity;
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity, uint8_t sendStop)
{
    return requestFrom((uint8_t)address, (uint8_t)quantity, (uint32_t)0, (uint8_t)0, (uint8_t)sendStop);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity)
{
    return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity)
{
    return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity, int sendStop)
{
    return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)sendStop);
}

uint8_t TwoWire::endTransmission(uint8_t sendStop)
{
	uint32_t StatusFlag;

    XMC_I2C_CH_MasterStart(XMC_I2C_config->channel, (txAddress << 1), XMC_I2C_CH_CMD_WRITE);

    for (uint8_t count = 0; count < txBufferLength; count++)
    {
        XMC_I2C_CH_MasterTransmit(XMC_I2C_config->channel, txBuffer[count]);

		timeout = WIRE_COMMUNICATION_TIMEOUT;
		// Wait for ACK, leave when NACK is detected
        do
		{
			StatusFlag = XMC_I2C_CH_GetStatusFlag(XMC_I2C_config->channel);

			// Check for NACK, indicates that no slave with desired address is on the bus
			if(this->hasError == true || timeout == 0 )
			{
				this->hasError = false;
				inRepStart = false;
				flush();
				return 1;
			}
			timeout--;
		}
		while ( (StatusFlag & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U );
		XMC_I2C_CH_ClearStatusFlag(XMC_I2C_config->channel, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);
    }

    if (sendStop)
    {
        XMC_I2C_CH_MasterStop(XMC_I2C_config->channel);
		timeout = WIRE_COMMUNICATION_TIMEOUT;
        while ( XMC_USIC_CH_GetTransmitBufferStatus(XMC_I2C_config->channel) == XMC_USIC_CH_TBUF_STATUS_BUSY )
		{
			if(this->hasError == true || timeout == 0 )
			{
				this->hasError = false;
				inRepStart = false;
				flush();
				return 1;
			}
			timeout--;
		}
		inRepStart = false;
    }
	else
	{
		inRepStart = true;
	}

    // reset tx buffer iterator vars
    txBufferIndex = 0;
    txBufferLength = 0;
    // indicate that we are done transmitting
    transmitting = 0;
    return 0;
}

uint8_t TwoWire::endTransmission(void)
{
    return endTransmission(true);
}
